# CLI-Calculator

./: .coverage  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
C_calclulator/: calculator.c
calculator.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  python.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: python.rst.txt
docs/_build/html/source/: modules.html  python.html
src/c/: .ninja_log  Makefile  build.ninja  calculator.c  calculator.h  calculator_module.c
src/python/: __init__.py  cli_calculator.py
tests/: test_c_backend.py
tests/c/: test_calculator.c  test_calculator.py
tests/python/: test_api.py  test_cli.py
