[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["calculator"]  # Replace with your package/module name
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "First Party"
force_sort_within_sections = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
