# setup.cfg - Centralized configuration for Python tools

[metadata]
name = cli-calculator
version = 1.0.0
description = High-performance CLI calculator with C backend
long_description = file: README.md
long_description_content_type = text/markdown
author = CLI Calculator Team
author_email = team@cli-calculator.com
license = MIT
url = https://github.com/your-username/cli-calculator
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C

[options]
packages = find:
package_dir =
    = src/python
python_requires = >=3.8
install_requires =
    cffi>=1.15.0
    click>=8.0.0
    colorama>=0.4.4

[options.packages.find]
where = src/python

[options.entry_points]
console_scripts =
    cli-calculator = cli_calculator.cli:main

# Flake8 Configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .tox,
    docs
per-file-ignores =
    __init__.py:F401
    tests/*:S101,D103
max-complexity = 10
docstring-convention = google

# Coverage Configuration
[coverage:run]
source = src/python
omit =
    */tests/*
    */test_*.py
    setup.py
    */venv/*
    */__pycache__/*
branch = True
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
show_missing = True
skip_covered = False
precision = 2

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

# Pytest Configuration
[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --cov=src/python
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-branch
    --cov-fail-under=80
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    benchmark: marks tests as benchmarks